asset/css/home.css
@import "normalize.css";
@import "slideshow.css";
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Licorice&display=swap');


body {
	font-family: Nunito, sans-serif;
	/*font-family: Calibri, sans-serif;*/
	font-size: 14px;
	background-color: gainsboro;
}

a {
	text-decoration : none;
}

#forkongithub a {
	color: #e7e7e7;
	text-align: center;
	font-family: arial,sans-serif;
	font-weight: 700;
	font-size: 1rem;
	line-height: 2rem;
	position: relative;
	transition: .5s;
	padding: 5px 40px;
	
	background-color: #33aec1;
}

@media screen and (min-width: 800px) {
	#forkongithub {
		display: block;
		position: fixed;
		top: 0;
		right: 0;
		width: 200px;
		height: 200px;
		overflow: hidden;
		z-index: 9999;
	}
	
	#forkongithub a {
		width: 200px;
		position: absolute;
		top: 60px;
		right: -60px;
		transform: rotate(45deg);

		padding-top: 0px;
		padding-bottom: 0px;
		border-bottom: 1px solid black;
		border-top: 1px solid black;
	}
	
	#forkongithub  .github-logo {
		vertical-align: middle;
	}
}

.header {
	display: flex;
	justify-content: space-between;
}

#site_nav > dl {
	display: flex;
	justify-content: right;
	column-gap: 1.6em;
}

#site_nav dt {
	padding: 0;
	text-transform: uppercase;
}

#site_nav dt::first-letter {
	font-size: 1.3em;
}

.slideshow {
	list-style: none;
	margin: 0;
	padding: 0 0 50px 0;
}

.article-container {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-gap: 20px;
	margin-top: 20px;
}

.article-container > article {
	background-color: #ecebeb;
	padding: 10px
}

.article-container > article header {
	padding-bottom: 20px; /* Some padding */
	font-size: 1.8em;
}

.article-container > article p, .article-container > article ul {
	font-size: 1.1em;
	margin-bottom: 0;
}

.article-container > article li {
	list-style-position: outside;
	margin-left: -1em;
}

.article-container > article header {
	display: inline-block;
	padding-bottom: 5px;
	position: relative;
}

.article-container > article header:before{
	content: "";
	position: absolute;
	width: 50%;
	height: 1px;
	bottom: 0;
	border-bottom: 1px solid dimgray;
}

.article-container > article em {
	font-weight: bold;
	font-style: normal;
}

#Thanks {
	text-align: center;
	margin: 20px 0 20px 0;
	padding: 10px;
	background-color: #ecebeb;
}

#Thanks > ul {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-gap: 0;

	margin: 0;
	list-style-type: none;
	padding-left: 0;
}

#Thanks > header {
	padding-bottom: 5px;
	font-size: 1.8em
}

footer {
	text-align: center;
	font-size: 10px;
}

@media screen and (orientation: landscape) { /*and (min-width: 900px) {*/
	body {
		margin: 0 20% 0 20%;
	}
}

